# viewLidar

./: README.md  a  a.cpp
test/: a.out  test.cpp
view_3d/: CMakeLists.txt  readme.md
view_3d/src/: main.cpp
view_3d/src/utils/: tools.h  viewKitti.h
view_box/: CMakeLists.txt  readme.md
view_box/src/: main.cpp
view_box/src/utils/: tools.h
view_lidar/: main.py
view_lidar/viewFrame/: CMakeLists.txt
view_lidar/viewFrame/src/: main.cpp  tools.h
view_nuscenes/: CMakeLists.txt  readme.md  x.ipynb
view_nuscenes/src/: main.cpp
view_nuscenes/src/utils/: tools.h
